refactor: skillId 메타데이터 기반 라우팅 + Message.Role 접근 제어 도입
- SkillExecutor 인터페이스: canHandle()/isInternalCall 제거, skillId() + requiredRole() + execute(String) 추가
- A2aMetadataKeys.SKILL_ID 상수 도입 (a2a-common) — message.metadata()로 skill ID 전달
- AgentExecutor: skillId 기반 라우팅, requiredRole() 검증으로 역할 기반 접근 제어 구현
- A2aTool.sendRequest(skillId, text): 메시지에 skillId 메타데이터 포함하도록 변경
- AgentClient들: A2A.toAgentMessage() 대신 Message.builder() + metadata 사용
- 클래스 행동 기반 네이밍: DeliveryStatusSkillExecutor, DeliveryTrackingSkillExecutor,
  OrderInfoSkillExecutor, PaymentStatusSkillExecutor (Internal/External 접미사 제거)
- AgentCard: delivery_status_internal, order_info_by_tracking 스킬 선언 추가
- README.md, CLAUDE.md: 변경된 아키텍처 패턴 반영

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>